<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Softbank MMSReq</string>
<string name="b_request">Request</string>
<string name="not_available">Mobile connection is not available.</string>
<string name="failed_to_connect">Failed to connect.</string>
<string name="error_from_server">Server Error.</string>
<string name="request_successed">Request successed.</string>
<string name="start_request">Requesting</string>
<string name="description_label">Try to turn off WiFi if failed.</string>
<string name="connect_to_server">Connecting to server...</string>
<string name="connect_to_mobile">Connecting to Mobile Network...</string>
<string name="request_to_server">Requesting to server...</string>
<string name="check_auto_exit">Auto exit</string>
<string name="check_auto_request">Auto request when connected to mobile network.</string>
<string name="check_toast">Enable toast notification.</string>
<string name="invalid_apn_setting">APN for MMS was not found.</string>
<string name="label_apn_proxy">Web Proxy</string>
</resources>
