<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/RelativeLayout01"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent">
    <TableLayout android:id="@+id/TableLayout01"
                 android:layout_height="wrap_content"
                 android:layout_width="fill_parent"
                 android:stretchColumns="1"
                 android:shrinkColumns="0"
                 android:layout_centerVertical="false"
                 android:layout_centerInParent="false">
        <TableRow android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:baselineAligned="true">
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content">
                <TextView android:text="@string/label_apn_proxy"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center_vertical"/>
                <Spinner android:id="@+id/spinner_apn"
                         android:entries="@array/mms_type"
                         android:layout_height="wrap_content"
                         android:layout_width="fill_parent"
                         android:layout_margin="5px" />
            </LinearLayout>
        </TableRow>

        <TableRow android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:baselineAligned="true">
            <CheckBox android:text="@string/check_auto_exit"
                      android:id="@+id/check_auto_exit"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" />
        </TableRow>
        <TableRow android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:baselineAligned="true">
            <CheckBox android:text="@string/check_auto_request"
                      android:id="@+id/check_auto_request"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" />
        </TableRow>
        <TableRow android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:baselineAligned="true">
            <CheckBox android:text="@string/check_toast"
                      android:id="@+id/check_toast"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content" />
        </TableRow>
        <TableRow android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:baselineAligned="true">
            <TextView android:id="@+id/TextView01"
                      android:layout_height="wrap_content"
                      android:text="@string/description_label"
                      android:layout_width="fill_parent"
                      android:layout_marginLeft="5px" />
        </TableRow>
        <TableRow android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:baselineAligned="true">
            <Button android:id="@+id/b_request"
                    android:text="@string/b_request"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
        </TableRow>
        <TableRow android:layout_height="wrap_content"
                  android:layout_width="fill_parent"
                  android:baselineAligned="true">
            <TextView android:layout_height="wrap_content"
                      android:id="@+id/t_result"
                      android:layout_width="fill_parent"
                      android:layout_marginLeft="5px" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
